--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.1",
     "express-fileupload": "^1.5.1",
     "express-validator": "^7.2.0",
+    "express-ws": "^5.0.2",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.16",
@@ -32,6 +33,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express-fileupload": "^1.5.1",
+    "@types/express-ws": "^3.0.5",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^10.0.0",
