--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "sequelize": "^6.37.5",
+    "sharp": "^0.33.5",
     "uuid": "^11.0.3"
   },
   "description": "",
