--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -17,7 +17,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "noEmit": false,
     "jsx": "react-jsx",
     "downlevelIteration": true,
     "baseUrl": "src",
@@ -28,12 +28,11 @@
       "@features/*": ["features/*"],
       "@entities/*": ["entities/*"],
       "@shared/*": ["shared/*"],
-      "@appTypes": ["appTypes"],
-      "@service/*": ["service/*"]
     }
   },
   "include": [
     "src/app/types/globals.d.ts",
-    "src"
+    "src",
+    "vite.config.ts"
   ]
 }
