--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "express-ws": "^5.0.2",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mime-types": "^3.0.1",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
     "sequelize": "^6.37.5",
