--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cheerio": "^1.1.2",
     "compression": "^1.7.5",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "express-fileupload": "^1.5.1",
     "express-validator": "^7.2.0",
     "express-ws": "^5.0.2",
+    "fluent-ffmpeg": "^2.1.3",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mime-types": "^3.0.1",
@@ -37,6 +39,7 @@
     "@types/cors": "^2.8.17",
     "@types/express-fileupload": "^1.5.1",
     "@types/express-ws": "^3.0.5",
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/nodemailer": "^6.4.17",
