--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
         "react-icons": "^5.4.0",
         "react-redux": "^9.2.0",
         "react-router-dom": "^7.1.3",
-        "react-transition-group": "^4.4.5"
+        "react-transition-group": "^4.4.5",
+        "react-virtuoso": "^4.13.0"
     },
     "scripts": {
         "dev": "vite",
