--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
         "axios": "^1.7.9",
         "clsx": "^2.1.1",
         "debounce": "^2.2.0",
+        "idb": "^8.0.3",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-hook-form": "^7.54.2",
